# Video-Editor

./: BUILD_SUMMARY.md  CODEBASE_EXPLORATION.md  FEATURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROFESSIONAL_FEATURES_SUMMARY.md  RE_ENABLEMENT_GUIDE.md  SUMMARY.md  VALIDATION_CHECKLIST.md  gradle.properties  settings.gradle
.claude/: settings.local.json
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/uc/ucworks/videosnap/: MainActivity.java  VideoEditorScreen.kt  placeholder.txt
androidApp/src/main/res/layout/: activity_main.xml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/uc/ucworks/videosnap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  mlt_wrapper.cpp  native-lib.cpp
app/src/main/cpp/libs/include/: Mlt.h
app/src/main/java/uc/ucworks/videosnap/: AudioWaveformGenerator.kt  ColorCorrectionManager.kt  DefaultOnboardingPages.kt.disabled  DragAndDropContainer.kt.disabled  Draggable.kt.disabled  DropTarget.kt.disabled  ExportScreen.kt  ExportWorker.kt  GoogleDriveManager.kt.disabled  KeyframeEffect.kt.disabled  MainActivity.java  MainActivity.kt  MediaImportScreen.kt.disabled  OnboardingScreen.kt.disabled  ProjectHistoryScreen.kt  ProjectManager.kt  ProjectManagerScreen.kt  ResponsiveLayout.kt  SeekBar.kt  TextOverlay.kt  Tooltip.kt  (+9 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: build.gradle
(+100 files in other folders)
